# FACT

./: .env.template  .gitignore  CLI-README.md  GITHUB_ISSUE_UPDATE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  MCP_INTEGRATION_SUCCESS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PUBLISHING-SUMMARY.md  README.md  REQUIREMENTS_ANALYSIS.md  TEST_PLAN.md  WASM_INTEGRATION_REPORT.md  browser_wasm_test.html  github_issue_update.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test-cli.js  test-wasm-standalone.mjs  test_wasm_integration.cjs  tsconfig.json  wasm-pack.toml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/checkpoints/: summary-session-20250731-160420.md  summary-session-20250731-161201.md  summary-session-20250731-185214.md  summary-session-20250731-191257.md  summary-session-20250731-202453.md  summary-session-20250731-202840.md  summary-session-20250731-203654.md  summary-session-20250731-212338.md  summary-session-20250731-212934.md  summary-session-20250731-213657.md  summary-session-20250731-213758.md  summary-session-20250731-214736.md  task-1753977782.json  task-1753978230.json  task-1753978252.json  task-1753984554.json  task-1753987858.json  task-1753989147.json  task-1753991900.json  task-1753993303.json  task-1753994026.json  task-1753994095.json  task-1753994188.json  task-1753996216.json  task-1753996980.json  task-1753997086.json  task-1753997618.json  task-1753998275.json  task-1753998410.json  task-1753998558.json  task-1753999183.json  task-1754016310.json
.github/ISSUE_TEMPLATE/: fact-implementation-tracker.md
architecture/: architecture-overview.md  architecture-review.md  executive-summary.md
cargo-crate/: Cargo.toml  README.md  custom_template.json  fact.json
cargo-crate/.claude-flow/metrics/: performance.json  task-metrics.json
cargo-crate/examples/: basic.rs
cargo-crate/src/: cache.rs  engine.rs  lib.rs  processor.rs  templates.rs
cli/: .eslintrc.json  .gitignore  .prettierrc.json  LICENSE  README.md  jest.config.js  package.json  tsconfig.json
cli/scripts/: postinstall.js
cli/src/: index.ts
cli/tests/: config-manager.test.ts  engine.test.ts  setup.ts  wasm-loader.test.ts
deployment/: DEPLOYMENT_GUIDE.md
docs/: 12_system_architecture_components.md  1_overview_project.md  3_core_concepts.md  9_complete_setup_guide.md  README.md  architecture.md  requirements.md
docs/blog/: blog-post-introducing-fact.md  blog_post_fact_system.md
docs/libraries/: core-libraries.md
examples/: tool_execution_demo.py
examples/arcade-dev/: interactive_demo.py  requirements.txt  run_all_examples.py  verify_setup.py
fact-memory/examples/: basic_usage.py  mcp_client.py  performance_comparison.py
fact-memory/src/: hello_mcp_server.py  test_client.py  test_mcp_integration.py
logs/: performance_optimization_1753988152.json
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: cache-manager-stub.ts  cache-manager.ts  cli.ts  cognitive-engine-stub.ts  cognitive-engine.ts  index.ts  logger.ts  performance-monitor-stub.ts  performance-monitor.ts  template-registry-stub.ts  template-registry.ts  wasm-loader.ts
memory/agents/: README.md
memory/sessions/: README.md
plans/: fact-system-comprehensive-implementation-plan.md
rust-core/: Cargo.toml
rust-core/.claude-flow/metrics/: performance.json  task-metrics.json
rust-core/src/: lib.rs  main.rs
rust-core/src/cognitive/: engine.rs  mod.rs  template.rs
scripts/: demo_cache_resilience.py  demo_lifecycle.py  fix_imports.py  fix_imports_comprehensive.py  init_environment.py  performance_benchmark.py  run_benchmarks.py  run_benchmarks_demo.py  run_benchmarks_standalone.py  run_optimized_benchmarks.py  setup.py  setup_env.py  test_benchmark_runner.py  test_cache_fix.py  test_cache_resilience.py  test_fact_cache_integration.py  test_response_padding.py  validate_complete_system.py  validate_env.py
src/: __init__.py  wasm_integration.py
src/arcade/: __init__.py  client.py  errors.py  gateway.py
src/benchmarking/: __init__.py  comparisons.py  framework.py  monitoring.py  profiler.py  visualization.py
src/cache/: validation.py
src/core/: agentic_flow.py  cli.py  config.py  conversation.py  driver.py  errors.py
src/db/: connection.py  models.py
src/mcp/: __init__.py  protocol.py  transport.py
src/monitoring/: __init__.py  metrics.py  performance_optimizer.py
src/security/: __init__.py  auth.py  cache_encryption.py  config.py  error_handler.py  input_sanitizer.py  token_manager.py
src/tools/: __init__.py  decorators.py  executor.py  validation.py
tests/: conftest.py  debug_sql_validation.py  test_all_fixes.py  test_basic_functionality.py  test_fixes_summary.py  test_imports.py  test_nonetype_bug.py  test_query_error.py  test_revenue_trends.py  test_runner.py  test_simple.py  test_sql_fixes.py  test_sql_fixes_validation.py
tests/integration/: test_cache_resilience_e2e.py  test_cache_resilience_e2e_sync.py  test_complete_system.py  test_system_integration.py
tests/performance/: test_benchmarks.py
tests/unit/: test_cache_manager_integration.py  test_cache_mechanism.py  test_cache_security.py  test_cache_validation.py  test_core_driver.py  test_database_operations.py  (+4 more)
wasm/: Cargo.toml  README-MCP.md  README.md  TEST-SUMMARY.md  TESTING-STRATEGY.md  build-wasm.sh  build.sh  package.json  test-mcp-standalone.mjs
wasm/.claude-flow/metrics/: performance.json  task-metrics.json
wasm/.github/workflows/: test.yml
wasm/benches/: cache_benchmark.rs  performance.rs
wasm/scripts/: benchmark-runner.js  install-mcp.sh  test-mcp-comprehensive.js  test-runner.sh
wasm/src/: async_optimizations.rs  cache.rs  lib.rs  mcp-server.js  optimizations.rs  processor.rs  utils.rs
wasm/tests/: mcp_server_tests.js  performance_tests.rs  wasm_tests.rs
wasm/tests/integration/: README.md  test_integration_suite.rs
wasm/tests/integration/cli/: test_cli_commands.rs
wasm/tests/integration/mcp/: test_mcp_server.rs
wasm/tests/integration/wasm/: test_wasm_loading.rs
(+39 files in other folders)
